--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <tcw2-recipe-item [recipe]="recipe" (click)="onSelected(recipe)"></tcw2-recipe-item>
+      <tcw2-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (click)="onSelected(recipe)"></tcw2-recipe-item>
     </ul>
   </div>
 </div>
