--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
     <hr>
     <tcw2-shopping-list-add></tcw2-shopping-list-add>
     <ul class="list-group">
-      <a class="list-group-item" style="cursor: pointer"></a>
+      <a class="list-group-item" style="cursor: pointer" *ngFor="let item of items">{{item.name}} ({{item.quantity}})</a>
     </ul>
   </div>
 </div>
