Initial routing setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <tcw2-header></tcw2-header>
 <div class="container">
-  <tcw2-recipes></tcw2-recipes>
-  <tcw2-shopping-list></tcw2-shopping-list>
+  <router-outlet></router-outlet>
 </div>
