--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -8,15 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">TopCATI Web</a>
+      <a class="navbar-brand" [routerLink]="['/']" >TopCATI Web</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Recipies<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Shopping list<span class="sr-only">(current)</span></a></li>
+        <li><a [routerLink]="['/recipes']">Recipies</a></li>
+        <li><a [routerLink]="['/cart']">Shopping list</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data collection<span class="caret"></span></a>
           <ul class="dropdown-menu">
