--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
-    <a class="btn btn-success">New Recipe</a>
+    <a class="btn btn-success" [routerLink]="['new']">New Recipe</a>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <tcw2-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (click)="onSelected(recipe)"></tcw2-recipe-item>
+      <tcw2-recipe-item *ngFor="let recipe of recipes; let i = index" [recipe]="recipe" [recipeId]="i" ></tcw2-recipe-item>
     </ul>
   </div>
 </div>
-
