--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
 <div class="col-md-5">
-  <tcw2-recipe-list (recipeSelected)="selectedRecipe = $event"></tcw2-recipe-list>
+  <tcw2-recipe-list ></tcw2-recipe-list>
 </div>
   <div class="col-md-7">
-    <tcw2-recipe-detail [selectedRecipe]="selectedRecipe"></tcw2-recipe-detail>
+    <router-outlet></router-outlet>
   </div>
 </div>
