--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -14,9 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a [routerLink]="['/recipes']">Recipies</a></li>
-        <li><a [routerLink]="['/cart']">Shopping list</a></li>
+        <li routerLinkActive="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/recipes']">Recipies</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/cart']">Shopping list</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Data collection<span class="caret"></span></a>
           <ul class="dropdown-menu">
