--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,9 +1,11 @@
 <div class="row">
   <div class="col-xs-10">
     <hr>
-    <tcw2-shopping-list-add></tcw2-shopping-list-add>
+    <tcw2-shopping-list-add [item]="selectedItem"></tcw2-shopping-list-add>
     <ul class="list-group">
-      <a class="list-group-item" style="cursor: pointer" *ngFor="let item of items">{{item.name}} ({{item.quantity}})</a>
+      <a class="list-group-item" style="cursor: pointer"
+         (click)="onSelectItem(item)"
+         *ngFor="let item of items">{{item.name}} ({{item.quantity}})</a>
     </ul>
   </div>
 </div>
