Shopping list item selection implemented

--- a/src/app/shopping-list/shopping-list-add.component.html
+++ b/src/app/shopping-list/shopping-list-add.component.html
@@ -20,7 +20,7 @@
             id="item-quantity"
             required
             class="form-control"
-          [(ngModel)]="item.quantity"
+          [ngModel]="item.quantity"
           name="quantity">
         </div>
       </div>
