--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,84 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <a class="btn btn-danger" (click)="onCancel()">Cancel</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Title</label>
+            <input type="text" id="name"
+                   formControlName="name"
+                   class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="image-url">Image url</label>
+            <input type="text" id="image-url"
+                   formControlName="imagePath"
+                   class="form-control"
+                   #imgUrl>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="img">
+            <img [src]="imgUrl.value">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="content"></label>
+            <textarea type="text" id="content"
+                      formControlName="description"
+                      rows="6" class="form-control">
+            </textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <ul class="list-group"
+              formArrayName="ingredients">
+            <div class="row" *ngFor="let ingredient of recipeForm.controls['ingredients'].controls; let i =index">
+              <div formGroupName="{{i}}">
+                <div class="col-sm-5"><input type="text"
+                                             formControlName="name"
+                                             class="form-control"></div>
+                <div class="col-sm-5"><input type="text"
+                                             formControlName="quantity"
+                                             class="form-control"></div>
+                <div class="col-sm-2">
+                  <button class="btn btn-danger" (click)="onRemoveIng(i)"> X</button>
+                </div>
+              </div>
+              <br><br>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="form-group row">
+      <div class="col-md-5"><input type="text" class="form-control" #itemName></div>
+      <div class="col-md-5"><input type="text" class="form-control" #itemQuantity></div>
+      <div class="col-md-2">
+        <button type="button" class="btn btn-primary" (click)="onAddIng(itemName.value,itemQuantity.value)">+</button>
+      </div>
+    </div>
+  </div>
+</div>
