--- a/src/app/shopping-list/shopping-list-add.component.html
+++ b/src/app/shopping-list/shopping-list-add.component.html
@@ -28,9 +28,11 @@
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" *ngIf="bAdd" [disabled]="!f.valid">Add</button>
-          <button class="btn btn-success" type="submit" *ngIf="!bAdd" [disabled]="!f.valid">Save</button>
-          <button class="btn btn-danger" type="button" *ngIf="!bAdd">Delete Item</button>
-          <button class="btn btn-primary" type="button" *ngIf="!bAdd">Clear</button>
+          <div *ngIf="!bAdd">
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
+            <button class="btn btn-danger" type="button" (click)="onDelete()">Delete Item</button>
+            <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
+          </div>
         </div>
       </div>
     </form>
